# ChangeLog for dev-python/PyQt4
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*PyQt4-4.5.5_pre20090730 (31 Jul 2009)

  31 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.5.3_pre20090724.ebuild, +PyQt4-4.5.5_pre20090730.ebuild:
  New snapshot

  30 Jul 2009; Davide Pesavento <davidepesa@gmail.com>
  PyQt4-4.5.3_pre20090724.ebuild, files/configure.py.patch:
  Use eqmake4 in the qpy subdirs to fix the remaining QA issues. Drop the
  last hunk from configure.py patch since it's redundant now.

  29 Jul 2009; Davide Pesavento <davidepesa@gmail.com>
  PyQt4-4.5.3_pre20090724.ebuild:
  Respect CC, CXX and LINK when building modules. Respect {C,CXX,LD}FLAGS
  when debug is enabled too. Properly fix rpath issues in QtCore.

*PyQt4-4.5.3_pre20090724 (25 Jul 2009)

  25 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  +PyQt4-4.5.3_pre20090724.ebuild:
  New snapshot

  14 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.5.2_pre20090706.ebuild:
  Remove old snapshot

*PyQt4-4.5.2_pre20090706 (08 Jul 2009)

  08 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.5.2_pre20090626.ebuild, +PyQt4-4.5.2_pre20090706.ebuild:
  Bump PyQt4 snapshot

*PyQt4-4.5.2_pre20090626 (28 Jun 2009)

  28 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +PyQt4-4.5.2_pre20090626.ebuild, -files/fix_license_check.patch:
  New snapshot

  18 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  -PyQt4-4.5.1_pre20090612.ebuild:
  4.5.1 is in portage, drop old snapshot.

  18 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  -files/PyQt4-4.4.4-qgraphicsproxywidget-avoid-event-callback-loop.patch:
  Removed obsolete patch.

  15 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  PyQt4-4.5.1_pre20090612.ebuild, metadata.xml:
  Drop bogus qt3support USE flag.

*PyQt4-4.5.1_pre20090612 (14 Jun 2009)

  14 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +PyQt4-4.5.1_pre20090612.ebuild:
  New snapshot
