@@ -1,5 +1,5 @@
 AUX configure.py.patch 1582 RMD160 f32260fa941070356a21fb98c749436c89f9ea71 SHA1 7dc0aa5d30ad15c43e4e303d1f26735e710a4d26 SHA256 dbd98df4abb88791f45cd5a896ab2d0fadd6f77935d37d318f8ef05f984b313d
 DIST PyQt-x11-gpl-4.5.5-snapshot-20090730.tar.gz 6843141 RMD160 2bc3c78c18afc62c678baea718a8205f906cff42 SHA1 3fb08ca605d885d085056d2776f2b64f27017cb3 SHA256 659605ad19686b860eb23857459bd6142dd30afc4ffa05a2295b0e119f44591c
-EBUILD PyQt4-4.5.5_pre20090730.ebuild 3548 RMD160 d35daba506b54ef2a4d5f8d8ccd660878837e796 SHA1 e31df3369299e09fdc3d4d573f0f54ed1a78d62b SHA256 446a71fb9cdc8956669ce26f51d402ff2f888c1ed945942eeba9247c4256e1c8
-MISC ChangeLog 8046 RMD160 4bbe6b6f3bed171184521d21c11e5f35108c8624 SHA1 dbf7f7752623aed469ace2ccc3dedfdf51337f54 SHA256 431ecd22defb3300dfad7137bc2a30ccce8687acec533f576663c7c37ee7a580
+EBUILD PyQt4-4.5.5_pre20090730.ebuild 4059 RMD160 57f08e31d4b1758d961441d7e087df183786cc34 SHA1 df137dc6b0526a996e8d5ceaf76af3cd905c4164 SHA256 41d5b55be83e595da723d894cc20b91afe597be61b83c8b70e256b8251bd4916
+MISC ChangeLog 8216 RMD160 36a29b78689e146804328e6f5e7daec989057d34 SHA1 25730b6cc68b917c14eb666ade9f2ed06b4810ed SHA256 e9fe29fc44c4ee307080383893a95621c1ad69884a4a22ec95116f70b7cfff6c
 MISC metadata.xml 642 RMD160 0a9271db6e18561fdd834d054186fbb0445fc19b SHA1 27ab2a924dff45be4cef4efaa01a67bbe3bff2c7 SHA256 002a5a6bb12da2ef8b9e7b22541922ff4e92d7c1ae1d82c29bbd2c6c7faeb91c
